app/auth/phpldapadmin/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: phpldapadmin-redirect
  namespace: #@ data.values.phpldapadmin.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phpldapadmin-redirect
  namespace: #@ data.values.phpldapadmin.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}.{}`)".format(data.values.phpldapadmin.dns.name, data.values.domain)
    kind: Rule
    priority: 12
    services:
    - name: phpldapadmin
      port: 80
      strategy: RoundRobin
    middlewares:
    - name: phpldapadmin-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: phpldapadmin
  namespace: #@ data.values.phpldapadmin.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - https
  routes:
  - match: #@ "Host(`{}.{}`)".format(data.values.phpldapadmin.dns.name, data.values.domain)
    kind: Rule
    priority: 12
    services:
    - name: phpldapadmin
      port: 80
      strategy: RoundRobin
  tls:
    secretName: certificate-phpldapadmin
